--- a/frontend/adoption/templates/home/index.html
+++ b/frontend/adoption/templates/home/index.html
@@ -20,7 +20,6 @@
         <a href="#home">home</a>
         <a href="#about">about</a>
         <a href="#shop">shop</a>
-        <a href="#services">services</a>
         <a href="#appointment">appointment</a>
         <a href="#contact">contact</a>
       </nav>
@@ -61,12 +60,7 @@
 
 
 
-
-
-
-
-
-    <section class="home" id="home">
+    <!-- <section class="home" id="home">
 
         <div class="content">
             <h3><span>hi</span> welcome to our pet shop</h3>
@@ -74,7 +68,7 @@
         </div>
 
     </section>
-
+ -->
 
 
 
