--- a/frontend/adoption/static/home/css/styles.scss
+++ b/frontend/adoption/static/home/css/styles.scss
@@ -1,15 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-:root {
-  --carrot-color: #e67e22;
-  --black: #130f40;
-  --white: #fff;
-  --light-color: #666;
-  --light-bg: #eee;
-  --border: 0.2rem solid var(--black);
-  --box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
-}
-
 * {
   font-family: "Poppins", sans-serif;
   margin: 0;
@@ -20,6 +10,28 @@
   text-decoration: none;
   text-transform: capitalize;
   transition: 0.2s linear;
+}
+
+$carrot-color: #e67e22;
+$black: #130f40;
+$white: #fff;
+$light-color: #666;
+$light-bg: #eee;
+$border: 0.2rem solid var(--black);
+$box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
+
+@mixin grid($val) {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax($val, 1fr));
+}
+
+@mixin form-btn {
+  width: 100%;
+  text-align: center;
+
+  &:hover {
+    background: $black;
+  }
 }
 
 html {
@@ -37,13 +49,9 @@ html {
   }
 
   &::-webkit-scrollbar-thumb {
-    background: var(--carrot-color);
+    background: $carrot-color;
     border-radius: 5rem;
   }
-}
-
-section {
-  padding: 5rem 9%;
 }
 
 .btn {
@@ -52,10 +60,10 @@ section {
   padding: 0.8rem 2.8rem;
   border-radius: 5rem;
   border-top-left-radius: 0;
-  border: var(--border);
+  border: $border;
   cursor: pointer;
   background: none;
-  color: var(--black);
+  color: $black;
   font-size: 1.7rem;
   overflow: hidden;
   z-index: 0;
@@ -68,7 +76,7 @@ section {
     left: 0;
     height: 100%;
     width: 100%;
-    background: var(--black);
+    background: $black;
     z-index: 1;
     transition: 0.2s linear;
     clip-path: circle(0% at 0% 5%);
@@ -79,8 +87,9 @@ section {
   }
 
   &:hover {
-    color: var(--white);
+    color: $white;
   }
+
 }
 
 @keyframes fadeIn {
@@ -90,17 +99,13 @@ section {
   }
 }
 
-/* body {
-  height: 300rem;
-} */
-
 .header {
-  background-color: var(--white);
+  background-color: $white;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 2rem 9%;
-  box-shadow: var(--box-shadow);
+  box-shadow: $box-shadow;
   position: fixed;
   top: 0;
   left: 0;
@@ -108,27 +113,23 @@ section {
   z-index: 1000;
   transform: translateY(-10rem);
 
-  &.active {
-    transform: translateY(0rem);
-  }
-
   .logo {
     font-size: 2.5rem;
-    color: var(--black);
+    color: $black;
     font-weight: bolder;
 
     i {
-      color: var(--carrot-color);
+      color: $carrot-color;
     }
   }
 
   .navbar a {
     margin: 0 1rem;
     font-size: 1.7rem;
-    color: var(--light-color);
+    color: $light-color;
 
     &:hover {
-      color: var(--carrot-color);
+      color: $carrot-color;
     }
   }
 
@@ -136,22 +137,24 @@ section {
   .icons div {
     font-size: 2.5rem;
     margin-left: 1.5rem;
-    color: var(--black);
+    color: $black;
     cursor: pointer;
 
     &:hover {
-      color: var(--carrot-color);
+      color: $carrot-color;
     }
   }
 
-  .login-form {
+}
+
+.login-form {
     position: absolute;
     top: 120%;
     right: 2rem;
     width: 35rem;
     border-radius: 1rem;
-    background: var(--white);
-    box-shadow: var(--box-shadow);
+    background: $white;
+    box-shadow: $box-shadow;
     padding: 2rem;
     display: none;
 
@@ -161,18 +164,18 @@ section {
     }
 
     h3 {
-      color: var(--black);
+      color: $black;
       font-size: 2.5rem;
       padding-bottom: 0.5rem;
     }
 
     .box {
       width: 100%;
-      border-bottom: var(--border);
+      border-bottom: $border;
       border-width: 0.1rem;
       padding: 1.5rem 0;
       font-size: 1.6rem;
-      color: var(--black);
+      color: $black;
       text-transform: none;
       margin: 1rem 0;
     }
@@ -186,17 +189,13 @@ section {
       label {
         font-size: 1.5rem;
         cursor: pointer;
-        color: var(--light-color);
+        color: $light-color;
       }
     }
 
     .btn {
-      width: 100%;
-      text-align: center;
-
-      &:hover {
-        background: var(--black);
-      }
+      @include form-btn();
+      margin: 1.5rem 0;
     }
 
     .links {
@@ -207,58 +206,26 @@ section {
 
       a {
         font-size: 1.4rem;
-        color: var(--carrot-color);
+        color: $carrot-color;
 
         &:hover {
-          color: var(--black);
+          color: $black;
           text-decoration: underline;
         }
       }
     }
-  }
+
 }
 
 #menu-btn {
   display: none;
 }
 
-.home {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  background: url(../images/cover1.jpg) no-repeat;
-  background-position: center;
-  background-size: cover;
-  position: relative;
 
-  .content {
-    width: 50rem;
 
-    h3 {
-      font-size: 6rem;
-      color: var(--white);
-      padding-bottom: 1rem;
 
-      span {
-        color: var(--carrot-color);
-      }
-    }
 
-    .btn {
-      color: var(--white);
-      border-color: var(--white);
 
-      &:hover {
-        color: var(--black);
-      }
-
-      &::before {
-        background: var(--white);
-      }
-    }
-  }
-}
 
 @media (max-width: 991px) {
   html {
@@ -271,42 +238,5 @@ section {
 
   section {
     padding: 5rem 2rem;
-  }
-}
-
-@media (max-width: 768px) {
-  #menu-btn {
-    display: inline-block;
-  }
-
-  .header {
-    .navbar {
-      position: absolute;
-      top: 99%;
-      left: 0;
-      right: 0;
-      background: var(--white);
-      clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-
-      &.active {
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-      }
-
-      a {
-        display: block;
-        margin: 2rem;
-        font-size: 2rem;
-      }
-    }
-  }
-}
-
-@media (max-width: 450px) {
-  html {
-    font-size: 50%;
-  }
-
-  .header .login-form {
-    width: 90%;
   }
 }
